# problem-solutions

./: .gitignore  Leetcode Daily challenge-1015.md  README.md  notion_sync.py
.github/workflows/: notion-sync.yml  update-toc.yml
DataStructure/BalancedBinaryTree/: AVL.c  CMakeLists.txt
DataStructure/BinarySearchTree/: BST.c  CMakeLists.txt  main.c
DataStructure/BinaryTree/: BinaryTree.c  BinaryTree.h  main.c
DataStructure/Graph/Breadth-first algorithm/: CMakeLists.txt  main.c
DataStructure/Graph/Depth-first search/: CMakeLists.txt  main.c
DataStructure/Graph/adjacency list/: CMakeLists.txt  main.c
DataStructure/Graph/adjacency matrix/: CMakeLists.txt  main.c
DataStructure/Linear Structure/LinkedList/: LinkedList.c
DataStructure/Linear Structure/Queue/: LinkedQueue.c
DataStructure/Linear Structure/Queue/c/: ArrayQueue.c  CMakeLists.txt
DataStructure/Linear Structure/SequentialList/: SequentialLink.c
DataStructure/Linear Structure/Stack/: CMakeLists.txt  (+2 more)
DataStructure/LinkedList/: CMakeLists.txt
DataStructure/Queue/: ArrayQueue.c  LinkedQueue.c
DataStructure/Stack/: LinkedStack.c
LeetCode/By-Difficulty/: README.md
LeetCode/By-Topic/: README.md
LeetCode/Daily-Challenge/: Leetcode Daily challenge-0.md  Leetcode Daily challenge-1015.md  Leetcode Daily challenge-1475.md  Leetcode Daily challenge-19.md  Leetcode Daily challenge-2.md  Leetcode Daily challenge-207.md  Leetcode Daily challenge-23.md  Leetcode Daily challenge-3512.md  README.md
LeetCode/code-only/: leetCode_160.md  leetCode_82.md  leetCode_83.md
scripts/: generate_daily_toc.py
(+32 files in other folders)
